<fix> EventPublicServiceImp